# Pub-Sub-message-queue

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cpp  message_operations.h  protocol_handler.cpp  protocol_handler.h  server.cpp  server_client_operations.h
client/: CMakeLists.txt  main.cpp  test.cpp
client/include/: Event.h  Helpers.h  MessageQueueClient.h  Protocol.h
client/src/: helpers.cpp  message_queue_client.cpp  protocol.cpp
server/: CMakeLists.txt  client_operations.cpp  client_operations.h  common.h  message_operations.cpp  message_operations.h  protocol_handler.cpp  protocol_handler.h  server.cpp
server/include/: client_operations.h  common.h  message_operations.h  protocol_handler.h
server/src/: client_operations.cpp  message_operations.cpp  protocol_handler.cpp  server.cpp
